# ai_computer_use

./: .env.example  .gitignore  README.md  project-structure  pyproject.toml
src/: config.py  main.py
src/api/: anthropic.py  errors.py
src/tools/: base.py  collection.py  device_manager.py  ios_connection.py  ios_tool.py  mac_safety.py  mac_tool.py  system_tool.py
src/ui/: streamlit_app.py
src/utils/: cleanup.py  contexts.py  decorators.py  logging.py  state.py  system_check.py  validation.py
tests/: test_core.py
